--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1135,6 +1135,7 @@ cards:
             - label: Number of cases in 7-day period
               value: newCasesBySpecimenDateRollingSum
               tooltip: Number of new people tested positive in the seven day period ending on the date shown by date the sample was taken 
+              type: bar
               colour: 0
               rollingAverage: false
 
@@ -1171,6 +1172,7 @@ cards:
               value: newCasesBySpecimenDateRollingRate
               tooltip: Rate of new people tested positive in the seven day period ending on the date shown by date the sample was taken per 100,000 population 
               colour: 0
+              type: bar
               rollingAverage: false
 
         - heading: Data
