Tests processed - removed reference to reporting date

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -264,10 +264,9 @@ cards:
     cardType: chart
     fullWidth: true
     abstract: >
-      Number of confirmed positive, negative or void lab-based COVID-19 test results, by pillar, 
-      by date reported. This is a count of test results and may include multiple tests for an
-      individual person. Data for surveillance testing (pillar 4) are only available for the UK 
-      as a whole.
+      Number of confirmed positive, negative or void lab-based COVID-19 test results, by pillar. 
+      This is a count of test results and may include multiple tests for an individual person. 
+      Data for surveillance testing (pillar 4) are only available for the UK as a whole.
 
     download:
       - newPillarOneTestsByPublishDate
