added ltla to deaths within 60 days layout

--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -966,6 +966,7 @@ cards:
           - nation
           - region
           - utla
+          - ltla
       excluded:
         areaName:
           - Northern Ireland
