--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1096,7 +1096,7 @@ cards:
     cardType: chart
     fullWidth: true
     abstract: >
-      To Add - abstract.
+      To Do - add abstract and card specific metadata.  Optimise visual.
 
     download:
       - covidOccupiedMVBeds
@@ -1114,7 +1114,7 @@ cards:
             value: unoccupiedMVBeds
             tooltip: Number of unoccupied mechanical ventilation beds
             type: bar
-            colour: 4
+            colour: 0
             rollingAverage: false
 
           - label: Non-covid occupied MV beds
@@ -1128,14 +1128,14 @@ cards:
             value: suspectedCovidOccupiedMVBeds
             tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
             type: bar
-            colour: 3
+            colour: 4
             rollingAverage: false
 
           - label: Covid occupied
             value: covidOccupiedMVBeds
             tooltip: Number of mechanical ventilation beds occupied by confirmed COVID-19 patients
             type: bar
-            colour: 0
+            colour: 1
             rollingAverage: false
 
       - heading: Data
