--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1170,6 +1170,42 @@ cards:
             colour: 1
             rollingAverage: false
 
+      - heading: Daily (option 3)
+        tabType: chart
+        barType: line
+        fields:
+          - label: Covid occupied
+            value: covidOccupiedMVBeds
+            tooltip: Number of mechanical ventilation beds occupied by confirmed COVID-19 patients
+            type: line
+            fill: true
+            colour: 0
+            rollingAverage: false
+
+          - label: Suspected-covid occupied MV beds
+            value: suspectedCovidOccupiedMVBeds
+            tooltip: Number of mechanical ventilation beds occupied by suspected COVID-19 patients 
+            type: line
+            fill: false
+            colour: 3
+            rollingAverage: false
+
+          - label: Non-covid occupied MV beds
+            value: nonCovidOccupiedMVBeds
+            tooltip: Number of mechanical ventilation beds occupied by non-COVID-19 patients 
+            type: line
+            fill: false
+            colour: 4
+            rollingAverage: false
+
+          - label: Unoccupied MV beds
+            value: unoccupiedMVBeds
+            tooltip: Number of unoccupied mechanical ventilation beds
+            type: line
+            fill: false
+            colour: 1
+            rollingAverage: false
+
       - heading: Data
         tabType: table
         fields:
