Cases - daily change - added abstracts and restricted locationAware to England only not all nations.

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -499,10 +499,12 @@ cards:
     fullWidth: true
     locationAware:
       included:
-        areaType:
-          - nation
         areaName:
           - England
+    abstract: >
+      Number of people with at least one positive COVID-19 virus test result broken down to show the number of these cases 
+      that had been previously reported and the latest daily change. The daily change includes newly reported cases, plus 
+      adjustments to previously reported cases which may be negative.  
 
     download:
       - newCasesBySpecimenDate
