--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -503,7 +503,7 @@ cards:
           - England
     abstract: >
       Number of people with at least one positive COVID-19 virus test result broken down to show the number of these cases 
-      that had been previously reported and the latest daily change. The daily change includes newly reported cases, plus 
+      that have been previously reported and the latest daily change. The daily change includes newly reported cases, plus 
       adjustments to previously reported cases which may be negative.  
 
     download:
