Testing LFD Card added utla and ltla to locations to display in DevOnly block

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -423,6 +423,15 @@ cards:
     cardType: chart
     locationAware:
       included: 
+
+# {{ StartDevOnlyBlock }}
+
+        areaType:
+          - utla
+          - ltla
+
+# {{ EndDevOnlyBlock }}
+
         areaName:
           - England
 
